# waystone

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: frontmatter.rs  index.rs  lib.rs  main.rs
