[package]
name = "flintbrain-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flintbrain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles SQLite from source with FTS5 enabled — no system SQLite needed.
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2.7.1"
notify = "8.2.0"
# Phase 1 indexer
walkdir = "2"                 # recursive vault scan
serde_yaml = "0.9"            # parse YAML frontmatter (note: crate is in maintenance-only mode, still fine)
nanoid = "0.4"                # stable note ids (21-char default)
dirs = "5"                    # locate OS app-data dir for the index
chrono = "0.4"                # mtime → RFC-3339 timestamp fallback

